=== Safari-89 ===

2003-07-10  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3302021 - v74 and v85 hang with http://e-www.motorola.com/
	- fixed a bug with saving and restoring location object properties
	
        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::saveLocationProperties): Save the location object's properties, not
	the window's (!)
        (KWQKHTMLPart::saveInterpreterBuiltins): New function to save builtin properties of
	the interpeter.
        (KWQKHTMLPart::restoreInterpreterBuiltins): Similarly to restore them.
        (KWQKHTMLPart::openURLFromPageCache): Restore interpreter builtins too.
        * kwq/KWQPageState.h:
        * kwq/KWQPageState.mm:
        (-[KWQPageState initWithDocument:URL:windowProperties:locationProperties:interpreterBuiltins:]): Handle interpreter builtins.
        (-[KWQPageState invalidate]): Likewise.
        (-[KWQPageState dealloc]): Likewise.
        (-[KWQPageState interpreterBuiltins]): New method.
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge saveDocumentToPageCache]): Handle interpeter builtins.

2003-07-10  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

        * config.h: Check in newly generated version which has changed due to changes
        in configure.in.

2003-07-10  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

        - fixed 3317693 -- REGRESSION: many web pages are rendering with wrong layout (columns in HelpViewer, etc.)

        This is a workaround for the code generation bug in gcc that causes this problem with
        gcc 3.3 in optimized builds. We can remove it once both we and B&I are using a newer
        gcc with the fix. The bug number for the gcc problem is 3321716.

        * khtml/rendering/render_box.cpp:
        (workAroundBug3321716): Added. A function that does nothing and takes an integer parameter.